@@ -188,6 +188,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.7rc1
 
+ - [ZBX-3972] added NOW and DONE buttons into js calendar - change action after day selection (Eduard)
  - [ZBX-2467] added more command line arguments to objdump to request more debugging information about crashes (asaveljevs)
  - [ZBXNEXT-869] clarify in manpages how the process for runtime signalling is found (Richlv)
 
